# SymbolEmergence-VAE_affordance-GMM

./: .gitignore  README.md  cnn_vae_module_affordance.py  create_simple_dataset.py  create_single_object_dataset.py  main.py  pyproject.toml  recall_image_affordance.py  tool.py
