[project]
name = "symbolemergence-vae-affordance-gmm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "scikit-learn>=1.7.0",
    "torch==2.6.0+cu126",
    "torchvision==0.21.0+cu126",
    "torchaudio==2.6.0+cu126",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }
torchaudio = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
